--- a/vvs.css
+++ b/vvs.css
@@ -1,5 +1,7 @@
 body {
     column-count: 2;
+    -webkit-column-count: 2; /* Chrome, Safari, Opera */
+    -moz-column-count: 2; /* Firefox */
 }
 
 .station {
