--- a/vvs.css
+++ b/vvs.css
@@ -4,6 +4,15 @@ body {
 
 .clock {
     font-size: xx-large;
+    width: 50%;
+    text-align: right;
+    overflow: hidden;
+}
+
+.update {
+    font-size: xx-large;
+    width: 50%;
+    float: left;
 }
 
 .stations {
