Feature: only use transition for background to make transition smoother

--- a/vvs.css
+++ b/vvs.css
@@ -71,7 +71,7 @@ html, body {
     right: 0;
     position: fixed;
     overflow-y: hidden;
-    transition: 10s;
+    transition: background 10s;
 }
 
 .fade-in {
